--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Minkook Kim"
+  name             : "cswiz"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Math, Science, and Technology"
   location         : "Somewhere"
