--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
     "uglify-js": "^3.13.6"
   },
   "scripts": {
